src/ui/snapshots/grove__ui__add_repo__tests__empty_modal_renders_with_prompt_and_hint.snap
---
source: src/ui/add_repo.rs
assertion_line: 73
expression: render_to_string(&app)
---
" PROJECTS                                                             "
" ────────────────────────────     Select a worktree from the sidebar. "
"▸▼ grove                          (↑↓ or j/k to move, Enter to activat"
"   ○ main                                                             "
"   ●┌ Add repository ────────────────────────────────────────────┐    "
"   ●│                                                            │    "
"    │  Path to git repository:                                   │    "
" ▼ d│                                                            │    "
"   ○│                                                            │    "
"   ●│                                                            │    "
"    │                                                            │    "
" ───│  Enter to add  ·  Esc to cancel                            │    "
" [a]│                                                            │    "
" [w]│                                                            │    "
"    └────────────────────────────────────────────────────────────┘    "
" j/k  navigate                                                        "
" ?    help                                                            "
" q    quit                                                            "
"                                                                      "
"                                                                      "
