src/ui/snapshots/grove__ui__add_repo__tests__modal_shows_error_after_invalid_submit.snap
---
source: src/ui/add_repo.rs
expression: render_to_string(&app)
---
" PROJECTS                       ┌ grove ─────────────────────────────┐"
" ────────────────────────────   │                                    │"
"▸▼ grove                        │  Select a worktree from the sidebar│"
"   ○ main                       │  (↑↓ or j/k to navigate)           │"
"   ●┌ Add repository ────────────────────────────────────────────┐   │"
"   ●│                                                            │ si│"
"    │  Path to git repository:                                   │   │"
" ▼ d│  /definitely/not/a/real/path                               │   │"
"   ○│                                                            │   │"
"   ●│  ! resolving path /definitely/not/a/real/path: No such file│   │"
"    │                                                            │   │"
" ───│  Enter to add  ·  Esc to cancel                            │   │"
" [a]│                                                            │   │"
" [w]│                                                            │   │"
"    └────────────────────────────────────────────────────────────┘   │"
" j/k  navigate                  │                                    │"
" ?    help                      │                                    │"
" q    quit                      │                                    │"
"                                │                                    │"
"                                └────────────────────────────────────┘"
