src/ui/snapshots/grove__ui__add_repo__tests__modal_shows_typed_path.snap
---
source: src/ui/add_repo.rs
assertion_line: 275
expression: render_to_string(&app)
---
" PROJECTS                       ┌ grove ─────────────────────────────┐"
" ────────────────────────────   │                                    │"
"▸▼ grove                        │  Select a worktree from the sidebar│"
"   ○ main                       │  (↑↓ or j/k to move, Enter to activ│"
"   ●┌ Add repository ────────────────────────────────────────────┐   │"
"   ●│                                                            │ si│"
"    │  Path to git repository:                                   │   │"
" ▼ d│  /tmp/my-new-project                                       │   │"
"   ○│                                                            │   │"
"   ●│                                                            │   │"
"    │                                                            │   │"
" ───│  Enter to add  ·  Esc to cancel                            │   │"
" [a]│                                                            │   │"
" [w]│                                                            │   │"
"    └────────────────────────────────────────────────────────────┘   │"
" j/k  navigate                  │                                    │"
" ?    help                      │                                    │"
" q    quit                      │                                    │"
"                                │                                    │"
"                                └────────────────────────────────────┘"
